--- a/index.html
+++ b/index.html
@@ -646,16 +646,16 @@ footer .container {
   </div>
 </div>
 
-<section id="team" class="py-5 bg-dark text-white">
+<!-- <section id="team" class="py-5 bg-dark text-white">
   <div class="container">
     <div class="text-center mb-5" data-aos="fade-up">
       <h2 class="fw-bold display-5">Meet Our Team</h2>
       <p class="lead">Dedicated professionals committed to powering a greener future.</p>
-    </div>
+    </div> -->
 
-    <div class="row g-4">
-      <!-- Team Member 1 -->
-      <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+<!--     <div class="row g-4">
+      <!-- Team Member 1 --> -->
+<!--       <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
         <div class="card bg-secondary text-white border-0 h-100 text-center shadow-lg">
           <img src="https://randomuser.me/api/portraits/men/32.jpg" class="card-img-top rounded-top" alt="John Smith">
           <div class="card-body">
@@ -668,10 +668,10 @@ footer .container {
             <button class="btn btn-outline-light btn-sm" data-bs-toggle="modal" data-bs-target="#bio1">Read Bio</button>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- Modal for Member 1 -->
-      <div class="modal fade" id="bio1" tabindex="-1" aria-labelledby="bio1Label" aria-hidden="true">
+<!--       <div class="modal fade" id="bio1" tabindex="-1" aria-labelledby="bio1Label" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content bg-dark text-white">
             <div class="modal-header border-0">
@@ -683,10 +683,10 @@ footer .container {
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- Team Member 2 -->
-      <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="200">
+<!--       <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="200">
         <div class="card bg-secondary text-white border-0 h-100 text-center shadow-lg">
           <img src="https://randomuser.me/api/portraits/women/45.jpg" class="card-img-top rounded-top" alt="Angela Brooks">
           <div class="card-body">
@@ -699,10 +699,10 @@ footer .container {
             <button class="btn btn-outline-light btn-sm" data-bs-toggle="modal" data-bs-target="#bio2">Read Bio</button>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- Modal for Member 2 -->
-      <div class="modal fade" id="bio2" tabindex="-1" aria-labelledby="bio2Label" aria-hidden="true">
+<!--       <div class="modal fade" id="bio2" tabindex="-1" aria-labelledby="bio2Label" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content bg-dark text-white">
             <div class="modal-header border-0">
@@ -714,10 +714,10 @@ footer .container {
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- Team Member 3 -->
-      <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
+<!--       <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
         <div class="card bg-secondary text-white border-0 h-100 text-center shadow-lg">
           <img src="https://randomuser.me/api/portraits/men/15.jpg" class="card-img-top rounded-top" alt="David Adeyemi">
           <div class="card-body">
@@ -730,10 +730,10 @@ footer .container {
             <button class="btn btn-outline-light btn-sm" data-bs-toggle="modal" data-bs-target="#bio3">Read Bio</button>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- Modal for Member 3 -->
-      <div class="modal fade" id="bio3" tabindex="-1" aria-labelledby="bio3Label" aria-hidden="true">
+<!--       <div class="modal fade" id="bio3" tabindex="-1" aria-labelledby="bio3Label" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content bg-dark text-white">
             <div class="modal-header border-0">
@@ -745,10 +745,10 @@ footer .container {
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- Team Member 4 -->
-      <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
+<!--       <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
         <div class="card bg-secondary text-white border-0 h-100 text-center shadow-lg">
           <img src="https://randomuser.me/api/portraits/women/68.jpg" class="card-img-top rounded-top" alt="Lilian Obasi">
           <div class="card-body">
@@ -761,10 +761,10 @@ footer .container {
             <button class="btn btn-outline-light btn-sm" data-bs-toggle="modal" data-bs-target="#bio4">Read Bio</button>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- Modal for Member 4 -->
-      <div class="modal fade" id="bio4" tabindex="-1" aria-labelledby="bio4Label" aria-hidden="true">
+<!--       <div class="modal fade" id="bio4" tabindex="-1" aria-labelledby="bio4Label" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content bg-dark text-white">
             <div class="modal-header border-0">
@@ -779,7 +779,7 @@ footer .container {
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 
 <!-- Contack Section -->
