--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ footer .container {
     </div> -->
 
 <!--     <div class="row g-4">
-      <!-- Team Member 1 --> -->
+      <!-- Team Member 1 --> 
 <!--       <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
         <div class="card bg-secondary text-white border-0 h-100 text-center shadow-lg">
           <img src="https://randomuser.me/api/portraits/men/32.jpg" class="card-img-top rounded-top" alt="John Smith">
