--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ footer .container {
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#featured-3">About</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#service">Services</a>
@@ -653,14 +653,14 @@ footer .container {
       <p class="lead">Dedicated professionals committed to powering a greener future.</p>
     </div> -->
 
-<!--     <div class="row g-4">
-      <!-- Team Member 1 --> 
-<!--       <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+    <!-- <div class="row g-4"> -->
+      <!-- Team Member 1 -->
+      <!-- <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
         <div class="card bg-secondary text-white border-0 h-100 text-center shadow-lg">
-          <img src="https://randomuser.me/api/portraits/men/32.jpg" class="card-img-top rounded-top" alt="John Smith">
+          <img src="https://randomuser.me/api/portraits/men/32.jpg" class="card-img-top rounded-top" alt="Mr Randy">
           <div class="card-body">
-            <h5 class="card-title mb-0">John Smith</h5>
-            <p class="text-muted small mb-2">Chief Operations Officer</p>
+            <h5 class="card-title mb-0">Mr Randy</h5>
+            <p class="text-muted small mb-2">Chief Executive Officer</p>
             <div class="mb-3">
               <a href="#" class="text-white me-2"><i class="bi bi-linkedin"></i></a>
               <a href="#" class="text-white"><i class="bi bi-twitter"></i></a>
@@ -671,7 +671,7 @@ footer .container {
       </div> -->
 
       <!-- Modal for Member 1 -->
-<!--       <div class="modal fade" id="bio1" tabindex="-1" aria-labelledby="bio1Label" aria-hidden="true">
+      <!-- <div class="modal fade" id="bio1" tabindex="-1" aria-labelledby="bio1Label" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content bg-dark text-white">
             <div class="modal-header border-0">
@@ -686,12 +686,12 @@ footer .container {
       </div> -->
 
       <!-- Team Member 2 -->
-<!--       <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="200">
+      <!-- <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="200">
         <div class="card bg-secondary text-white border-0 h-100 text-center shadow-lg">
-          <img src="https://randomuser.me/api/portraits/women/45.jpg" class="card-img-top rounded-top" alt="Angela Brooks">
+          <img src="./images/11.jpg" class="card-img-top rounded-top" alt="Mr. Francis Adedeji">
           <div class="card-body">
-            <h5 class="card-title mb-0">Angela Brooks</h5>
-            <p class="text-muted small mb-2">Sustainability Lead</p>
+            <h5 class="card-title mb-0">Mr. Francis Adedeji</h5>
+            <p class="text-muted small mb-2">Director</p>
             <div class="mb-3">
               <a href="#" class="text-white me-2"><i class="bi bi-linkedin"></i></a>
               <a href="#" class="text-white"><i class="bi bi-twitter"></i></a>
@@ -702,7 +702,7 @@ footer .container {
       </div> -->
 
       <!-- Modal for Member 2 -->
-<!--       <div class="modal fade" id="bio2" tabindex="-1" aria-labelledby="bio2Label" aria-hidden="true">
+      <!-- <div class="modal fade" id="bio2" tabindex="-1" aria-labelledby="bio2Label" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content bg-dark text-white">
             <div class="modal-header border-0">
@@ -717,12 +717,12 @@ footer .container {
       </div> -->
 
       <!-- Team Member 3 -->
-<!--       <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
+      <!-- <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
         <div class="card bg-secondary text-white border-0 h-100 text-center shadow-lg">
-          <img src="https://randomuser.me/api/portraits/men/15.jpg" class="card-img-top rounded-top" alt="David Adeyemi">
+          <img src="./images/10.jpg" class="card-img-top rounded-top" alt="Mrs. Deborah Joshua">
           <div class="card-body">
-            <h5 class="card-title mb-0">David Adeyemi</h5>
-            <p class="text-muted small mb-2">Technical Director</p>
+            <h5 class="card-title mb-0">Mrs. Deborah Joshua</h5>
+            <p class="text-muted small mb-2">Head Secretary</p>
             <div class="mb-3">
               <a href="#" class="text-white me-2"><i class="bi bi-linkedin"></i></a>
               <a href="#" class="text-white"><i class="bi bi-twitter"></i></a>
@@ -733,7 +733,7 @@ footer .container {
       </div> -->
 
       <!-- Modal for Member 3 -->
-<!--       <div class="modal fade" id="bio3" tabindex="-1" aria-labelledby="bio3Label" aria-hidden="true">
+      <!-- <div class="modal fade" id="bio3" tabindex="-1" aria-labelledby="bio3Label" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content bg-dark text-white">
             <div class="modal-header border-0">
@@ -748,12 +748,12 @@ footer .container {
       </div> -->
 
       <!-- Team Member 4 -->
-<!--       <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
+      <!-- <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
         <div class="card bg-secondary text-white border-0 h-100 text-center shadow-lg">
-          <img src="https://randomuser.me/api/portraits/women/68.jpg" class="card-img-top rounded-top" alt="Lilian Obasi">
+          <img src="./images/13.jpg" class="card-img-top rounded-top" alt="Mr. Abimbola Ogundipe">
           <div class="card-body">
-            <h5 class="card-title mb-0">Lilian Obasi</h5>
-            <p class="text-muted small mb-2">Environmental Analyst</p>
+            <h5 class="card-title mb-0">Mr. Abimbola Ogundipe</h5>
+            <p class="text-muted small mb-2">Support Engineer</p>
             <div class="mb-3">
               <a href="#" class="text-white me-2"><i class="bi bi-linkedin"></i></a>
               <a href="#" class="text-white"><i class="bi bi-twitter"></i></a>
@@ -764,7 +764,7 @@ footer .container {
       </div> -->
 
       <!-- Modal for Member 4 -->
-<!--       <div class="modal fade" id="bio4" tabindex="-1" aria-labelledby="bio4Label" aria-hidden="true">
+      <!-- <div class="modal fade" id="bio4" tabindex="-1" aria-labelledby="bio4Label" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content bg-dark text-white">
             <div class="modal-header border-0">
@@ -776,8 +776,8 @@ footer .container {
             </div>
           </div>
         </div>
-      </div>
-    </div>
+      </div> -->
+    <!-- </div>
   </div>
 </section> -->
 
@@ -795,7 +795,7 @@ footer .container {
           <p><strong>Address:</strong><br>123 Enatura Street,<br>Green Energy District,<br>Lagos, Nigeria</p>
           <p><strong>Email:</strong><br>info@enatura.fake</p>
           <p><strong>Phone:</strong><br>+234 800 000 0000</p>
-          <p><strong>Hours:</strong><br>Mon - Fri: 9am – 5pm<br>Sat & Sun: Closed</p>
+          <p><strong>Hours:</strong><br>Mon - Fri: 8am – 5pm<br>Sat & Sun: Closed</p>
         </div>
       </div>
 
